--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
                 <input type="email" id="email" name="email_address">
             </div>
 
-            <div>
+            <div class="status-date">
+                <div id="status">
                 <label for="role">Status</label>
                 <select id="role" name="user_role_name">
                 <option value="student">Student</option>
                 <option value="instructor">Instructor</option>
                 <option value="guest">Guest</option>
                 </select>
+                </div>
+                <div id="status-date-blank"></div>
+                <div id="dates">
+                <label for="date">Date</label>
+                <input type="date" id="date" name="date">
+                </div>
             </div>
 
             <div>
@@ -39,7 +46,7 @@
                 <input type="radio" id="css" name="fav_language" value="CSS">
                 <label for="css">CSS</label>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">JavaScript</label>
+                <label for="javascript">JS</label>
             </div>
 
             <div>
@@ -47,14 +54,11 @@
                 <textarea id="comments" name="comments"></textarea>
             </div>
 
-            <div>
-                <label for="date">Date</label>
-                <input type="date" id="date" name="date">
-            </div>
 
-            <div>
+
+            <div id="news-terms">
                 <input type="checkbox" id="signup" name="signup" value="Signup">
-                <label for="signup">Sign up for news letter</label><br>
+                <label for="signup">Sign up for newsletter</label><br>
                 <input type="checkbox" id="terms" name="terms" value="Terms">
                 <label for="terms"> Agree to terms and conditions</label>
             </div>
